--- a/blue.htm
+++ b/blue.htm
@@ -3803,6 +3803,35 @@ our natural 1M responses to exactly 4 cards.
     </li>
    </ul>
   </div>
+  <p>
+   The nature of 1
+   <span class="ccolor">
+    &clubs;
+   </span>
+   -(2X) is similar to 1NT-(2X), yet there are some differences.
+We use plain Rubinsohl instead of Transfer Lebensohl here.  The 1
+   <span class="ccolor">
+    &clubs;
+   </span>
+   opener is
+unlimited and perhaps unbalanced.  Preempting with a long suit is no longer
+a good idea:
+  </p>
+  <ul>
+   <li>
+    The preemptive value is overvalued due to a probable misfit.
+   </li>
+   <li>
+    Opener can bid again with extra values.
+   </li>
+  </ul>
+  <p>
+   [TODO: actual continuations over 1
+   <span class="ccolor">
+    &clubs;
+   </span>
+   -(2X)]
+  </p>
   <h1>
    The 1
    <span class="dcolor">
