deploy: 8435fc96a6b41e7026120cf0ad21cb62ac35bffc

--- a/blue.htm
+++ b/blue.htm
@@ -157,22 +157,21 @@ strong notrump works better than a weak or wide-ranged one.
 in majors provides better constructiveness.
   </p>
   <p>
-   We don't care about suit quality in constructive bidding.  Responder does not
-consider 3-card suits as biddable.
+   We don't care about suit quality in constructive bidding.  Nonforcing raises
+are mixed to some extent.  There is either extra strength or a good fit, but
+not both.
   </p>
   <p>
-   We use natural 2/1 over 1
-   <span class="dcolor">
-    &diams;
-   </span>
-   <span class="hcolor">
-    &hearts;
-   </span>
-   and swapped 2/1 over 1
+   Nebulous 2/1 responses are natural game forces or something constructive with
+a major suit, yet 1
    <span class="scolor">
     &spades;
    </span>
-   .
+   -2
+   <span class="hcolor">
+    &hearts;
+   </span>
+   is a negative free bid.
   </p>
   <p>
    The responses to 1
@@ -4310,6 +4309,10 @@ a good idea:
           <span class="hcolor">
            &hearts;
           </span>
+          , not 4=
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
         </tr>
        </table>
@@ -4366,70 +4369,13 @@ a good idea:
           <span class="dcolor">
            &diams;
           </span>
-          or 5+
+          , not 4=
           <span class="scolor">
            &spades;
           </span>
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            MIN, 5+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            MIN, 3+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2NT
-           </td>
-           <td>
-            MIN, 4=
-            <span class="hcolor">
-             &hearts;
-            </span>
-            , 0&ndash;2
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
