deploy: fb7c8e61f61404c3d023f6f33d3aa10bf2155a34

--- a/blue.htm
+++ b/blue.htm
@@ -157,7 +157,7 @@ strong notrump works better than a weak or wide-ranged one.
 in majors provides better constructiveness.
   </p>
   <p>
-   We don't care about suit quality in constructive bidding.  Nonforcing raises
+   We don't care about suit quality in constructive bidding.  Non-forcing raises
 are mixed to some extent.  There is either extra strength or a good fit, but
 not both.
   </p>
@@ -607,6 +607,18 @@ on that topic.
    Note that we don't open 11 HCP balanced hands.  Unlike aggressive sibling
 systems, we keep our opening range narrow for easier responses.
   </p>
+  <p>
+   Besides, we don't preempt with maximum (9&ndash;10 HCP) 4+
+   <span class="scolor">
+    &spades;
+   </span>
+   and 5+
+   <span class="hcolor">
+    &hearts;
+   </span>
+   .  Anticipate
+partner to open and respond to find a game.
+  </p>
   <h2>
    Choice of suit openings
   </h2>
@@ -674,7 +686,7 @@ non-club two suiters, planning to reverse in the primary suit later.
     12&ndash;13 HCP
    </li>
    <li>
-    &gt;= 7.0 NLTC
+    &gt;= 7.5 NLTC
    </li>
    <li>
     A 4-card major and 5 clubs
@@ -4242,6 +4254,50 @@ a good idea:
   <h1>
    Major suit openings
   </h1>
+  <p>
+   Our major suit raises mix length and strength together to make them difficult to
+compete.
+  </p>
+  <ul>
+   <li>
+    <strong>
+     Single raise
+    </strong>
+    : weak 4+ cards or constructive (~7&ndash;9 HCP) 3 cards.  Opener
+  only rebids unbalanced maximum hands.
+   </li>
+   <li>
+    <strong>
+     Double raise
+    </strong>
+    : invitation that can contain fewer points with a better fit.
+  Opener bids game with all maximums and good minimums.
+   </li>
+   <li>
+    <strong>
+     Bid 2
+     <span class="ccolor">
+      &clubs;
+     </span>
+     first
+    </strong>
+    : with something in between.  Opener rebids above 2M with
+  maximum hands.  You can filter maximum hands again.
+   </li>
+   <li>
+    <strong>
+     Jacoby 2NT
+    </strong>
+    : game force with 4+ cards.
+   </li>
+   <li>
+    <strong>
+     Jump to game
+    </strong>
+    : signoff with 5+ cards.  Bid 2NT with exactly 4 cards for a
+  possible better fit or 3NT.
+   </li>
+  </ul>
   <div class="tree">
    <ul>
     <li class="root">
@@ -4280,6 +4336,10 @@ a good idea:
          </td>
          <td>
           NF, 9&ndash;11 HCP, 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -4527,7 +4587,7 @@ a good idea:
           3NT
          </td>
          <td>
-          !Choice of games, 33(43), 12&ndash;15 HCP
+          !Choice of games, 3(433), 12&ndash;15 HCP
          </td>
         </tr>
        </table>
@@ -4650,66 +4710,6 @@ a good idea:
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !MIN, 4=
-            <span class="scolor">
-             &spades;
-            </span>
-            , 0&ndash;3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            MIN, 4+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            MIN, 5+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -4732,63 +4732,6 @@ a good idea:
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            MIN, 3+
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            MIN, 5+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2NT
-           </td>
-           <td>
-            MIN, 4=
-            <span class="scolor">
-             &spades;
-            </span>
-            , 0&ndash;2
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -4940,7 +4883,7 @@ a good idea:
           3NT
          </td>
          <td>
-          !Choice of games, 3(433), 12&ndash;15 HCP
+          !Choice of games, (4333), 12&ndash;15 HCP
          </td>
         </tr>
        </table>
@@ -4973,6 +4916,539 @@ a good idea:
           S/O, 5+
           <span class="scolor">
            &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="scolor">
+      &spades;
+     </span>
+     -2
+     <span class="ccolor">
+      &clubs;
+     </span>
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !MIN, 4=
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MIN, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MIN, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="scolor">
+      &spades;
+     </span>
+     -2
+     <span class="dcolor">
+      &diams;
+     </span>
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MIN, 3+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MIN, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          MIN, 4=
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <p>
+   In this bidding system of limited openings, opener usually wants to reverse with
+a maximum.  However, keep in mind that there are hands with nowhere to jump over
+1NT and 1
+   <span class="hcolor">
+    &hearts;
+   </span>
+   -1
+   <span class="scolor">
+    &spades;
+   </span>
+   :
+  </p>
+  <ul>
+   <li>
+    <strong>
+     Balanced (5332)
+    </strong>
+    : rebid the major suit like minimum 6+ cards.
+   </li>
+   <li>
+    <strong>
+     (4441)
+    </strong>
+    : bid the lowest 4-card suit if no fit is found yet.
+   </li>
+  </ul>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="hcolor">
+      &hearts;
+     </span>
+     -1
+     <span class="scolor">
+      &spades;
+     </span>
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          1NT
+         </td>
+         <td>
+          MIN, 4=
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MIN 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          or MAX 5=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MIN, 4+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          MAX, 44(41)
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          MAX, 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MAX, 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="hcolor">
+      &hearts;
+     </span>
+     -1NT
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MIN 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          or MAX 5=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          MAX, bad 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          MAX, 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MAX, good 6+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -9899,21 +10375,28 @@ not yet shown a suit.
    </ul>
   </div>
   <h1>
-   Exactly 5-card weak twos
+   Extended Muiderberg
   </h1>
   <p>
-   Weak twos in this bidding system show exactly 5 cards in the bid major and an
-unspecified suit.  Multi 2
+   Weak twos in this bidding system show exactly 5 cards in the bid major and a
+side suit.  Multi 2
    <span class="dcolor">
     &diams;
    </span>
-   already takes care of 6+ cards.
-  </p>
-  <p>
-   Non-jump new suits are non-forcing because sometimes we need to escape from a
-certain misfit.  With a strong misfit and a lower-ranking suit, we tend to buy
-3NT with a minor suit.  Otherwise, we go through 2NT and try to introduce
-hearts in the next round.
+   already takes care of 6+ cards.  In Muiderberg, the side
+suit must be a minor suit.  We extend 2
+   <span class="hcolor">
+    &hearts;
+   </span>
+   to include
+   <strong>
+    minimum
+   </strong>
+   4+
+   <span class="scolor">
+    &spades;
+   </span>
+   .
   </p>
   <div class="tree">
    <ul>
@@ -9945,7 +10428,7 @@ hearts in the next round.
           2NT
          </td>
          <td>
-          !INV+
+          !INV+ (R)
          </td>
         </tr>
        </table>
@@ -10014,7 +10497,10 @@ hearts in the next round.
             </span>
            </td>
            <td>
-            !MAX, 4+m
+            !MAX, 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
            </td>
           </tr>
          </table>
@@ -10027,8 +10513,8 @@ hearts in the next round.
            </td>
            <td>
             !MAX, 4+
-            <span class="scolor">
-             &spades;
+            <span class="dcolor">
+             &diams;
             </span>
            </td>
           </tr>
@@ -10051,6 +10537,24 @@ hearts in the next round.
         </tr>
        </table>
        <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !P/C, 4+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
         <li class="last node">
          <table>
           <tr>
@@ -10061,9 +10565,9 @@ hearts in the next round.
             </span>
            </td>
            <td>
-            4+
-            <span class="scolor">
-             &spades;
+            !P/C, 4+
+            <span class="dcolor">
+             &diams;
             </span>
            </td>
           </tr>
@@ -10108,7 +10612,7 @@ hearts in the next round.
           2NT
          </td>
          <td>
-          !INV+
+          !INV+ (R)
          </td>
         </tr>
        </table>
