--- a/wj.htm
+++ b/wj.htm
@@ -666,6 +666,22 @@ problems, but I believe they can be solved by further adjustments.
     </li>
    </ul>
   </div>
+  <p>
+   When preempting with 4+
+   <span class="scolor">
+    &spades;
+   </span>
+   and longer hearts, open 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   with maximum (8&ndash;10 HCP)
+and 2
+   <span class="hcolor">
+    &hearts;
+   </span>
+   with minimum (4&ndash;8 HCP).
+  </p>
   <h2>
    The notrump ladder
   </h2>
@@ -15558,13 +15574,8 @@ not yet shown a suit.
    </span>
   </h1>
   <p>
-   Ekren is an artificial preempt showing 4+ cards in each major.  This preempt is
-not only frequent (5&ndash;6%) but also frees major preempts from the other major.
-Ekren is slightly less frequent than a wild 5-card natural preempt (6&ndash;7%) but
-much more frequent than a traditional 6-card preempt (2.2&ndash;2.7%).
-  </p>
-  <p>
-   Ekren is originally at 2
+   Ekren is an artificial preempt showing 4+ cards in each major.  It is originally
+at 2
    <span class="dcolor">
     &diams;
    </span>
@@ -15576,10 +15587,23 @@ much more frequent than a traditional 6-card preempt (2.2&ndash;2.7%).
    <em>
     Precision
    </em>
-   and leave space for Multi.
+   and leave space
+for Multi.
   </p>
   <p>
-   Unlike natural preempts, we have 2NT as a nonforcing natural invitation.  Since
+   In this version of Polish Club, we open minimum 4+
+   <span class="scolor">
+    &spades;
+   </span>
+   and longer hearts with 2
+   <span class="hcolor">
+    &hearts;
+   </span>
+   .
+This makes a tendency that spades are longer than hearts in Ekren hands.
+  </p>
+  <p>
+   Unlike natural preempts, we have 2NT as a non-forcing natural invitation.  Since
 Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
   </p>
   <div class="tree">
@@ -16207,21 +16231,28 @@ Ekren hands can be fairly balanced, 2NT can be the sweet spot on misfit.
    </ul>
   </div>
   <h1>
-   Muiderberg twos
+   Extended Muiderberg
   </h1>
   <p>
-   Weak twos in this bidding system show exactly 5 cards in the bid major and 4+
-cards in an unspecified minor.  Multi 2
+   Weak twos in this bidding system show exactly 5 cards in the bid major and a
+side suit.  Multi 2
    <span class="dcolor">
     &diams;
    </span>
-   already takes care of 6+ cards.
-  </p>
-  <p>
-   Non-jump new suits are non-forcing because sometimes we need to escape from a
-certain misfit.  With a strong misfit and a lower-ranking suit, we tend to buy
-3NT with a minor suit.  Otherwise, we go through 2NT and try to introduce
-hearts in the next round.
+   already takes care of 6+ cards.  In Muiderberg, the side
+suit must be a minor suit.  We extend 2
+   <span class="hcolor">
+    &hearts;
+   </span>
+   to include
+   <strong>
+    minimum
+   </strong>
+   4+
+   <span class="scolor">
+    &spades;
+   </span>
+   .
   </p>
   <div class="tree">
    <ul>
@@ -16241,10 +16272,7 @@ hearts in the next round.
           </span>
          </td>
          <td>
-          !NF, 5+
-          <span class="scolor">
-           &spades;
-          </span>
+          !P/C
          </td>
         </tr>
        </table>
@@ -16256,10 +16284,99 @@ hearts in the next round.
           2NT
          </td>
          <td>
-          !INV+
+          !INV+ (R)
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            MIN, 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            MIN, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            MIN, 4+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !MAX, 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3NT
+           </td>
+           <td>
+            !MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -16275,6 +16392,44 @@ hearts in the next round.
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !P/C, 4+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="last node">
        <table>
@@ -16313,10 +16468,84 @@ hearts in the next round.
           2NT
          </td>
          <td>
-          !INV+
+          !INV+ (R)
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            MIN, 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            MIN, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !MAX, 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -16346,87 +16575,6 @@ hearts in the next round.
           !INV+, 3+
           <span class="scolor">
            &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     2M-2NT
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          MIN, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          MIN, 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !MAX, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !MAX, 4+
-          <span class="dcolor">
-           &diams;
           </span>
          </td>
         </tr>
