deploy: 06e0c261cef8ead74368824be3ddb67a7e48fd55

--- a/blue.htm
+++ b/blue.htm
@@ -346,11 +346,11 @@ on that topic.
           </span>
          </td>
          <td>
-          4+
+          2+
           <span class="dcolor">
            &diams;
           </span>
-          or 3334, 11&ndash;15 HCP
+          , 11&ndash;15 HCP
          </td>
         </tr>
        </table>
@@ -431,7 +431,7 @@ on that topic.
           </span>
          </td>
          <td>
-          !NAT, 5+
+          NAT UNBAL 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -638,7 +638,44 @@ partner to open and respond to find a game.
    </li>
   </ul>
   <h3>
-   Canap&eacute;
+   Variants of the 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   opening
+  </h3>
+  <p>
+   We removed the balanced variant (332)5 from the 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   opening.  The remaining
+variants are:
+  </p>
+  <ul>
+   <li>
+    6+
+    <span class="ccolor">
+     &clubs;
+    </span>
+   </li>
+   <li>
+    4M(xx)5 (but not 4M225, which is considered balanced)
+   </li>
+  </ul>
+  <p>
+   We choose 1
+   <span class="dcolor">
+    &diams;
+   </span>
+   over 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   for (xx)45 like most strong club systems.
+  </p>
+  <h3>
+   Maximum canap&eacute; (14&ndash;15 HCP)
   </h3>
   <p>
    Sometimes we open the secondary suit on purpose.  We canap&eacute; for maximum
@@ -659,37 +696,6 @@ non-club two suiters, planning to reverse in the primary suit later.
     <span class="dcolor">
      &diams;
     </span>
-   </li>
-  </ul>
-  <p>
-   There is also canap&eacute; for minimum 4M5
-   <span class="ccolor">
-    &clubs;
-   </span>
-   .  We open 1M so that 4M5
-   <span class="ccolor">
-    &clubs;
-   </span>
-   hands in the
-2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   opening are strong enough for the 2
-   <span class="dcolor">
-    &diams;
-   </span>
-   relay.
-  </p>
-  <ul>
-   <li>
-    12&ndash;13 HCP
-   </li>
-   <li>
-    &gt;= 7.5 NLTC
-   </li>
-   <li>
-    A 4-card major and 5 clubs
    </li>
   </ul>
   <h2>
@@ -5449,6 +5455,186 @@ a maximum.  However, keep in mind that there are hands with nowhere to jump over
           MAX, good 6+
           <span class="hcolor">
            &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="scolor">
+      &spades;
+     </span>
+     -1NT
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MIN, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MIN 6+
+          <span class="scolor">
+           &spades;
+          </span>
+          or MAX 5=
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          MAX, bad 6+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          MAX, 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MAX, good 6+
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
