--- a/blue.htm
+++ b/blue.htm
@@ -627,6 +627,9 @@ partner to open and respond to find a game.
   </p>
   <ul>
    <li>
+    Treat two suiters longer than 5-5 as 5-5
+   </li>
+   <li>
     Bid the longest suit
    </li>
    <li>
@@ -634,7 +637,7 @@ partner to open and respond to find a game.
     <span class="hcolor">
      &hearts;
     </span>
-    for 44 in majors
+    for 4-4 in majors
    </li>
   </ul>
   <h3>
@@ -678,21 +681,33 @@ variants are:
    Maximum canap&eacute; (14&ndash;15 HCP)
   </h3>
   <p>
-   Sometimes we open the secondary suit on purpose.  We canap&eacute; for maximum
-non-club two suiters, planning to reverse in the primary suit later.
+   For maximum unbalanced opening hands, we open the secondary suit on purpose.
+If there is a second round, opener reverses with the primary suit.  However,
+canap&eacute; cannot happen if either the primary or secondary suit is clubs because
+2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   must be long.
   </p>
   <ul>
    <li>
-    14&ndash;15 HCP
+    <strong>
+     5-5 or longer two suiter
+    </strong>
+    : open the lower ranking suit if it is not clubs
    </li>
    <li>
-    At least (54) in two of
-    <span class="scolor">
-     &spades;
-    </span>
-    <span class="hcolor">
-     &hearts;
-    </span>
+    <strong>
+     (54) not involving clubs
+    </strong>
+    : open the 4-card suit
+   </li>
+   <li>
+    <strong>
+     4441
+    </strong>
+    : open 1
     <span class="dcolor">
      &diams;
     </span>
@@ -4401,7 +4416,7 @@ compete.
           </tr>
          </table>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -4412,6 +4427,94 @@ compete.
            </td>
            <td>
             MIN, 5+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            MAX canap&eacute;, 5+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2NT
+           </td>
+           <td>
+            BAL MAX, 5
+            <span class="hcolor">
+             &hearts;
+            </span>
+            (332)
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            MAX, 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            MAX canap&eacute;, 5+
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            MAX, 6+
             <span class="hcolor">
              &hearts;
             </span>
@@ -4983,7 +5086,7 @@ compete.
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -4994,6 +5097,90 @@ compete.
          </td>
          <td>
           MIN, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          BAL MAX, 5(332)
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          MAX, 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MAX, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -5053,7 +5240,7 @@ compete.
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -5068,6 +5255,90 @@ compete.
           <span class="hcolor">
            &hearts;
           </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          MAX, 4+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MAX canap&eacute;, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MAX, 6+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          BAL MAX, 5(332)
          </td>
         </tr>
        </table>
@@ -9821,17 +10092,9 @@ not yet shown a suit.
             2NT
            </td>
            <td>
-            MIN, 5=
+            MIN, 6+
             <span class="ccolor">
              &clubs;
-            </span>
-            , 1&ndash;3
-            <span class="scolor">
-             &spades;
-            </span>
-            , 1&ndash;3
-            <span class="hcolor">
-             &hearts;
             </span>
            </td>
           </tr>
@@ -9847,7 +10110,7 @@ not yet shown a suit.
             </span>
            </td>
            <td>
-            MIN, 6+
+            MAX, 6+
             <span class="ccolor">
              &clubs;
             </span>
@@ -9873,17 +10136,13 @@ not yet shown a suit.
             </span>
            </td>
            <td>
-            !MAX, 6+
+            MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 6+
             <span class="ccolor">
              &clubs;
-            </span>
-            , 0&ndash;3
-            <span class="scolor">
-             &spades;
-            </span>
-            , 0&ndash;3
-            <span class="hcolor">
-             &hearts;
             </span>
            </td>
           </tr>
@@ -10017,7 +10276,7 @@ not yet shown a suit.
           </span>
          </td>
          <td>
-          FG (R)
+          !FG (R)
          </td>
         </tr>
        </table>
@@ -10097,7 +10356,7 @@ not yet shown a suit.
           </span>
          </td>
          <td>
-          FG (R)
+          !FG (R)
          </td>
         </tr>
        </table>
