--- a/blue.htm
+++ b/blue.htm
@@ -4037,6 +4037,10 @@ a good idea:
           <span class="hcolor">
            &hearts;
           </span>
+          or S/T 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
         </tr>
        </table>
@@ -4066,11 +4070,10 @@ a good idea:
           1NT
          </td>
          <td>
-          NF, 4+
+          NF, 3+
           <span class="ccolor">
            &clubs;
           </span>
-          , 8&ndash;11 HCP
          </td>
         </tr>
        </table>
@@ -4078,21 +4081,35 @@ a good idea:
       <li class="node">
        <table>
         <tr>
-         <td class="node" rowspan="1">
+         <td class="node" rowspan="4">
           2
           <span class="ccolor">
            &clubs;
           </span>
          </td>
          <td>
-          !F, 6+M 3&ndash;9 HCP or FG 0&ndash;3
-          <span class="scolor">
-           &spades;
+          !F, Multi:
+         </td>
+        </tr>
+        <tr>
+         <td>
+          (a) NAT FG, 4+
+          <span class="ccolor">
+           &clubs;
           </span>
-          0&ndash;3
-          <span class="hcolor">
-           &hearts;
+         </td>
+        </tr>
+        <tr>
+         <td>
+          (b) PRE TRF, 0&ndash;7 HCP, 5+
+          <span class="dcolor">
+           &diams;
           </span>
+         </td>
+        </tr>
+        <tr>
+         <td>
+          (c) PRE, 0&ndash;7 HCP, 6+M
          </td>
         </tr>
        </table>
@@ -4107,11 +4124,10 @@ a good idea:
           </span>
          </td>
          <td>
-          S/O, 4=
+          CONST, 8&ndash;9 HCP, 5+
           <span class="dcolor">
            &diams;
           </span>
-          , 3&ndash;9 HCP
          </td>
         </tr>
        </table>
@@ -4126,15 +4142,19 @@ a good idea:
           </span>
          </td>
          <td>
-          !P/C, 4+
+          !INV+, 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , shows
           <span class="hcolor">
            &hearts;
           </span>
-          , 5+
+          stopper or asks for
           <span class="scolor">
            &spades;
           </span>
-          , 7&ndash;9 HCP
+          stopper
          </td>
         </tr>
        </table>
@@ -4149,11 +4169,19 @@ a good idea:
           </span>
          </td>
          <td>
-          !TRF INV+, 6+
-          <span class="ccolor">
-           &clubs;
+          !INV+, 4+
+          <span class="dcolor">
+           &diams;
           </span>
-          , 10+ HCP
+          , shows
+          <span class="scolor">
+           &spades;
+          </span>
+          stopper or asks for
+          <span class="hcolor">
+           &hearts;
+          </span>
+          stopper
          </td>
         </tr>
        </table>
@@ -4165,11 +4193,10 @@ a good idea:
           2NT
          </td>
          <td>
-          !PRE, 5+
+          !PRE, 0&ndash;7 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
-          , 0&ndash;6 HCP
          </td>
         </tr>
        </table>
@@ -4184,11 +4211,10 @@ a good idea:
           </span>
          </td>
          <td>
-          !Mixed raise, 5+
+          !Mixed raise, 8&ndash;9 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
-          , 7&ndash;9 HCP
          </td>
         </tr>
        </table>
@@ -4203,11 +4229,10 @@ a good idea:
           </span>
          </td>
          <td>
-          INV, 5+
+          INV, 10&ndash;11 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
-          , 10&ndash;11 HCP
          </td>
         </tr>
        </table>
@@ -4222,13 +4247,9 @@ a good idea:
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          Choice of games, 6+
           <span class="hcolor">
            &hearts;
-          </span>
-          , 4+
-          <span class="dcolor">
-           &diams;
           </span>
          </td>
         </tr>
@@ -4244,13 +4265,9 @@ a good idea:
           </span>
          </td>
          <td>
-          !SPL, 0&ndash;1
+          Choice of games, 6+
           <span class="scolor">
            &spades;
-          </span>
-          , 4+
-          <span class="dcolor">
-           &diams;
           </span>
          </td>
         </tr>
