deploy: e86c8e488cf8c608dc039867f2bcf1a6b38be7bc

--- a/blue.htm
+++ b/blue.htm
@@ -346,11 +346,11 @@ on that topic.
           </span>
          </td>
          <td>
-          2+
+          3+
           <span class="dcolor">
            &diams;
           </span>
-          , 11&ndash;15 HCP
+          or MIN 3325, 11&ndash;15 HCP
          </td>
         </tr>
        </table>
@@ -4015,6 +4015,10 @@ a good idea:
    </span>
    opening
   </h1>
+  <p>
+   The only case opener has only 2 diamonds is 3325.  Responder should assume that
+opener has 3+ diamonds.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -4036,10 +4040,6 @@ a good idea:
           F, 4+
           <span class="hcolor">
            &hearts;
-          </span>
-          or S/T 5+
-          <span class="ccolor">
-           &clubs;
           </span>
          </td>
         </tr>
@@ -4070,10 +4070,11 @@ a good idea:
           1NT
          </td>
          <td>
-          NF, 3+
+          NF, 4+
           <span class="ccolor">
            &clubs;
           </span>
+          or 9&ndash;11 HCP 3343
          </td>
         </tr>
        </table>
@@ -4101,7 +4102,7 @@ a good idea:
         </tr>
         <tr>
          <td>
-          (b) PRE TRF, 0&ndash;7 HCP, 5+
+          (b) PRE TRF, 0&ndash;7 HCP, 4&ndash;5
           <span class="dcolor">
            &diams;
           </span>
@@ -4124,7 +4125,7 @@ a good idea:
           </span>
          </td>
          <td>
-          CONST, 8&ndash;9 HCP, 5+
+          CONST, 8&ndash;9 HCP, 4&ndash;5
           <span class="dcolor">
            &diams;
           </span>
@@ -4193,13 +4194,30 @@ a good idea:
           2NT
          </td>
          <td>
-          !PRE, 0&ndash;7 HCP, 6+
+          !F PRE, 0&ndash;7 HCP, 5+
           <span class="dcolor">
            &diams;
           </span>
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            MIN 3325
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -4211,7 +4229,7 @@ a good idea:
           </span>
          </td>
          <td>
-          !Mixed raise, 8&ndash;9 HCP, 6+
+          !F, mixed raise, 8&ndash;9 HCP, unbalanced 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -4229,7 +4247,7 @@ a good idea:
           </span>
          </td>
          <td>
-          INV, 10&ndash;11 HCP, 6+
+          INV, 10&ndash;11 HCP, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -4281,6 +4299,163 @@ a good idea:
          </td>
          <td>
           33(43), 12&ndash;15 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="dcolor">
+      &diams;
+     </span>
+     -2
+     <span class="ccolor">
+      &clubs;
+     </span>
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !P/C, MIN 2&ndash;4
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !P/C, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !P/C, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          or MAX 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !F, MAX, 3+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 3+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !F, MIN SPL, 1=
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , 3+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 3+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !NF, MIN FRAG, 0=
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , 3+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 3+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 5+
+          <span class="dcolor">
+           &diams;
+          </span>
          </td>
         </tr>
        </table>
