deploy: 9e895ef17c755a53fa216f70045f96655f23eab7

--- a/blue.htm
+++ b/blue.htm
@@ -4098,6 +4098,14 @@ opener has 3+ diamonds.
           <span class="ccolor">
            &clubs;
           </span>
+          , 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
         <tr>
@@ -4143,7 +4151,7 @@ opener has 3+ diamonds.
           </span>
          </td>
          <td>
-          !INV+, 4+
+          !INV+, 10+ HCP, 4+
           <span class="dcolor">
            &diams;
           </span>
@@ -4170,7 +4178,7 @@ opener has 3+ diamonds.
           </span>
          </td>
          <td>
-          !INV+, 4+
+          !INV+, 10+ HCP, 4+
           <span class="dcolor">
            &diams;
           </span>
