deploy: eae9c994a18510e94ae8b51edc11240db2142421

--- a/blue.htm
+++ b/blue.htm
@@ -4019,6 +4019,10 @@ a good idea:
    The only case opener has only 2 diamonds is 3325.  Responder should assume that
 opener has 3+ diamonds.
   </p>
+  <p>
+   With normal responding strength (8+ HCP), responder always bids a natural major
+suit first, even when there is a longer minor suit.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
